Changed Login's looking

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,17 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/nature01"
     tools:context=".Login">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/loginTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:background="#66003CD3"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
+        android:scaleX="1.2"
+        android:scaleY="1.1"
         android:text="@string/login"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/purple_700"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -92,11 +96,15 @@
 
         <TextView
             android:id="@+id/signUpText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="450dp"
+            android:layout_height="30dp"
             android:layout_marginTop="40dp"
+            android:background="#BF3F51B5"
             android:fontFamily="@font/poppinsmedium"
             android:text="@string/sign_up_here"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
