--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentScrollView"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
@@ -11,6 +12,7 @@
     android:padding="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/parentConstraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
@@ -111,9 +113,10 @@
             android:layout_width="392dp"
             android:layout_height="198dp"
             android:scaleX="2"
-            app:srcCompat="@drawable/borderfull01brighter"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="-3dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/borderfull01brighter" />
 
         <ImageView
             android:id="@+id/profileImageView"
@@ -157,7 +160,7 @@
 
         <TextView
             android:id="@+id/postDateTextView"
-            android:layout_width="65dp"
+            android:layout_width="40dp"
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
             android:text="@string/postDate"
@@ -178,13 +181,15 @@
 
         <EditText
             android:id="@+id/postDateTextDate"
-            android:layout_width="97dp"
-            android:layout_height="27dp"
-            android:layout_marginTop="5dp"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="2dp"
             android:ems="10"
             android:inputType="date"
+            android:text="@string/postDate"
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toEndOf="@+id/postDateTextView"
             app:layout_constraintTop_toBottomOf="@+id/latestPostImageView" />
 
@@ -205,9 +210,11 @@
             android:layout_width="392dp"
             android:layout_height="498dp"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/corners01"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="195dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/fullNameTextView"
+            app:srcCompat="@drawable/Corners01" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
