--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
+            android:fontFamily="serif"
             android:padding="10dp"
             android:text="@string/email"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="25dp"
+            android:fontFamily="serif"
             android:padding="10dp"
             android:text="@string/birthday"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -47,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:fontFamily="serif"
             android:padding="10dp"
             android:text="@string/latestPost"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -76,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
             android:padding="10dp"
             android:text="@string/birthday"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -89,6 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:fontFamily="serif"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="32sp"
@@ -103,6 +108,7 @@
             android:layout_width="145dp"
             android:layout_height="100dp"
             android:layout_marginTop="25dp"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/latestPostTextView"
             app:layout_constraintTop_toBottomOf="@+id/birthdateTextView"
@@ -112,7 +118,7 @@
             android:id="@+id/UserImageBackgroundImageView"
             android:layout_width="392dp"
             android:layout_height="198dp"
-            android:scaleX="2"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -136,10 +142,9 @@
             android:layout_marginTop="50dp"
             android:background="#00FFFFFF"
             android:backgroundTint="#00FFFFFF"
+            android:fontFamily="serif"
             android:textColor="#0C1E81"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.141"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/latestPostTextView"
             tools:text="Consult your posts" />
@@ -150,6 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="150dp"
+            android:fontFamily="serif"
             android:padding="10dp"
             android:text="@string/email"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
@@ -163,6 +169,7 @@
             android:layout_width="40dp"
             android:layout_height="20dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="serif"
             android:text="@string/postDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.051"
@@ -174,6 +181,7 @@
             android:layout_width="170dp"
             android:layout_height="30dp"
             android:layout_marginTop="4dp"
+            android:fontFamily="serif"
             android:text="@string/postLocation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/consultButton"
@@ -181,10 +189,11 @@
 
         <EditText
             android:id="@+id/postDateTextDate"
-            android:layout_width="120dp"
-            android:layout_height="35dp"
+            android:layout_width="129dp"
+            android:layout_height="33dp"
             android:layout_marginTop="2dp"
             android:ems="10"
+            android:fontFamily="serif"
             android:inputType="date"
             android:text="@string/postDate"
             android:textSize="11sp"
@@ -198,6 +207,7 @@
             android:layout_width="170dp"
             android:layout_height="30dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="serif"
             android:textColor="#000000"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -208,13 +218,28 @@
         <ImageView
             android:id="@+id/cornersImageView"
             android:layout_width="392dp"
-            android:layout_height="498dp"
+            android:layout_height="525dp"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/fullNameTextView"
-            app:srcCompat="@drawable/Corners01" />
+            tools:srcCompat="@drawable/Corners01" />
+
+        <Button
+            android:id="@+id/goBackButton"
+            android:layout_width="95dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:background="#00FFFFFF"
+            android:backgroundTint="#00FFFFFF"
+            android:fontFamily="serif"
+            android:textAlignment="textStart"
+            android:textColor="#0C1E81"
+            android:textSize="11sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/consultButton"
+            tools:text="Go back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
