Added: - 5 Navigation Buttons on UserProfile page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,8 +72,8 @@
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/ic_pass"
                 android:fontFamily="@font/poppinsmedium"
-                android:text="@string/password"
-                tools:targetApi="jelly_bean" />
+                tools:targetApi="jelly_bean"
+                tools:text="@string/password" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <ProgressBar
